--- a/src/components/carousel/CategoriaCarousel/CategoriaCarousel.scss
+++ b/src/components/carousel/CategoriaCarousel/CategoriaCarousel.scss
@@ -15,8 +15,8 @@
         margin: 0px auto;
         border-radius: 5px;
         // size
-        width: 60rem;
-        height: 400px;
+        width: 99%;
+        height: 500px;
     }
 }
 // color fondo
